[package]
name    = "fiatproof"
version = "0.1.0"
authors = ["Daisuke Kanda <dai1975@gmail.com>"]

[profile.release]
debug = true

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build.git"

[dev-dependencies]
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

[dependencies]
backtrace = "0.2"
lazy_static = "0.2.*"
assert_matches = "1.0.0"
interpolate_idents = "^0.2.6"
#mashup = "0.1"
hex_literals = "0.1.6"
#hex_literal = "0.1.1"
bit-vec = "^0.4"
num = "0.1"
rand = "^0.3"
byteorder = "^1.0"
rust-crypto = "^0.2"
secp256k1 = "^0.6"
libc = "0.2"
streaming-iterator = "0.1.2"
combine = "2.5.2"

#iobuf = "^5.7.0"
#nom = "^2.0"
#scoped_threadpool = "0.1.7"

