[package]
name    = "fiatproof"
version = "0.1.0"
authors = ["Daisuke Kanda <dai1975@gmail.com>"]
edition = '2018'

[profile.release]
debug = true

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build.git"

[dev-dependencies]
assert_matches = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies]
backtrace = "0.3.26"
bit-vec = "^0.6.0"
byteorder = "^1.0"
combine = "3.8.1"
lazy_static = "1.3.0"
libc = "0.2.55"
num = "0.2.0"
rand = "^0.6.5"
rust-crypto = "^0.2"
paste = "^0.1.5"
secp256k1 = { version = "0.13.0", features = ["rand"] }
streaming-iterator = "0.1.2"
